m/k/k3d-dfd-cluster-argo-cd/patch-service-argocd-server.yaml
#ManagedBy: cue

apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-insecure@kubernetescrd
