m/k/k3d-dfd-cluster-argo-cd/resource-ingress-argo-cd.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd
  annotations:
    external-dns.alpha.kubernetes.io/internal-hostname: argocd.dev.amanibhavam.defn.run
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.dev.amanibhavam.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
